Boris: - added custom scrollbar for the search results div;        - checking if user is authenticated before allowing a review to be submitted. Still need to store user data, to flag if they've left a review, and prevent multiple submissions;        - displaying placeholder svg if a poster is not available and skipping a result card entirely if a title is not available;        - improved client side error checking and handling.

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -84,3 +84,40 @@ body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvet
 .text-cyan { color: #35bdff; }
 
 .floatLeft { float: left; }
+
+/*
+  Idea from https://scriptgenerator.net/html-css-custom-scrollbar-code-generator/
+ */
+.scrollbar {
+
+  &::-webkit-scrollbar {
+    width: 14px;
+    background-color: #f4e7e7;
+
+    &:horizontal {
+      height: 14px;
+    }
+  }
+
+  &::-webkit-scrollbar-track {
+    border: 1px #787878 solid;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 0 6px #c8c8c8 inset;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #35aec3;
+    border: 1px solid #000000;
+    border-radius: 16px;
+
+    &:hover {
+      background-color: #58a1d3;
+      border: 1px solid #333333;
+    }
+
+    &:active {
+      background-color: #337996;
+      border: 1px solid #333333;
+    }
+  }
+}
